# Eleven-RAG

./: .env.example  AGENTS.md  BACKEND_GUIDE.md  README.md  pyproject.toml  tmp_meta.db  实施落地文档-分阶段.md  行动文档-解析与持久化升级.md  进度文档.md
.rag_store/: metadata.db  vector_index.json
eleven-rag/: main.py  nailong_cli.py  nailong_ingest.py
eleven-rag/controllers/: chat_controller.py  health_controller.py  ingestion_controller.py  memory_controller.py  retrieval_controller.py
eleven-rag/core/: config.py
eleven-rag/document_processing/: __init__.py  document.py  document_processor.py  pipeline.py
eleven-rag/embedding/: __init__.py  embedding_service.py
eleven-rag/evaluation/: __init__.py  dataset.py
eleven-rag/qa/: __init__.py  answering.py
eleven-rag/rag_system/: __init__.py  facade.py
eleven-rag/repositories/: document_repository.py  memory_repository.py  metadata_repository.py  vector_repository.py
eleven-rag/schemas/: chat.py  common.py  ingestion.py  memory.py  retrieval.py
eleven-rag/services/: chat_service.py  container.py  document_parser_service.py  ingestion_service.py  memory_service.py  mysql_pool.py  retrieval_service.py  text_utils.py
eleven-rag/tests/: test_eval_dataset.py  test_eval_runner.py  test_memory_repository.py  test_metadata_repository.py  test_mysql_pool.py  test_rag_system_facade.py  test_service_adapters.py
eleven-rag/vector_storage/: __init__.py  vector_store.py
scripts/: install-nailong-ps.ps1  manage_memory_schema.py  rebuild_faiss_index.py  warmup_embedding.py
