[project]
name = "eleven-rag"
version = "0.1.0"
description = "Minimal runnable RAG backend skeleton for Eleven-RAG"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.116.1",
  "faiss-cpu==1.13.2",
  "langchain-huggingface==0.2.0",
  "pymysql==1.1.1",
  "redis==5.0.8",
  "sqlalchemy==2.0.35",
  "uvicorn==0.35.0",
  "pydantic==2.11.7",
  "langchain==0.3.27",
  "langchain-unstructured==0.1.6",
  "unstructured[md,pdf]==0.18.13",
  "sentence-transformers==5.1.0",
]

[dependency-groups]
dev = [
  "pytest==8.3.3",
]
eval = [
  "datasets>=2.20.0",
  "ragas>=0.2.0",
  "llama-index>=0.12.0",
  "arize-phoenix>=4.0.0",
]

[tool.uv]
package = false
